--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -77,9 +77,11 @@ const listing=<%-JSON.stringify(listing)%>;
         <p class="starability-result card-text" data-rating="<%=review.rating%>"></p>
         <p class="card-text"><%=review.comment%></p>
         
-        <form class="mb-3"  method="POST" action="/listings/<%=listing._id%>/reviews/<%=review._id%>?_method=DELETE">
-          <button class="btn btn-sm btn-dark">Delete</button>
-        </form>
+        <% if (currUser && review.author._id.toString() === currUser._id.toString()) { %>
+          <form class="mb-3"  method="POST" action="/listings/<%=listing._id%>/reviews/<%=review._id%>?_method=DELETE">
+            <button class="btn btn-sm btn-dark">Delete</button>
+          </form>
+        <% } %>
       </div>
     <%}%>
   </div>
